Add new platform support for microbit, along with other minor updates and info
Signed-off-by: deadprogram <ron@hybridgroup.com>

--- a/source/documentation/cli/microbit.html.haml
+++ b/source/documentation/cli/microbit.html.haml
@@ -1,21 +1,23 @@
 ---
-title: Documentation - Arduino
+title: Documentation - Microbit
 author: The Hybrid Group
-description: Gort  Documentation Arduino
+description: Gort Documentation Microbit
 layout: documentation
 active_docs: true
 docs_cli_arduino_active: true
 ---
 
 .content-info
-  %h1.title-top Arduino
+  %h1.title-top Microbit
   .description
     %h3
-      %b gort [global options] arduino <required arguments> [optional arguments...]
+      %b gort [global options] microbit <required arguments> [optional arguments...]
     %br
     %h4 Description
     %p Install avrdude, and upload sketches to your Arduino
     :markdown
+          $ gort arduino
+
           Usage:
             # installs avrdude to allow uploading of sketches to Arduino
             gort arduino install
