--- a/source/documentation/getting_started/downloads.html.haml
+++ b/source/documentation/getting_started/downloads.html.haml
@@ -9,8 +9,8 @@ docs_downloads_active: true
 .content-info
   %h1.title-top Downloads
   .description
-    %p  We now have precompiled binaries, or you can also build from source if you prefer.
-    %p  The Gort CLI provides many useful features on many hardware platforms, and has no other dependencies. You install Gort separately from any framework, which means you can use it to program Arduinos with the Firmata firmware also compatible with Cylon.js, Gobot, Artoo, & Johnny-Five.
+    %p  We have precompiled binaries for most platforms, or you can also build from source if you prefer.
+    %p  The Gort CLI provides many useful features and has no other dependencies. You install Gort separately from any framework, which means you can use it to program Arduinos with the Firmata firmware also compatible with Cylon.js, Gobot, Artoo, & other frameworks.
     %h2 OSX
     %p If you are using Homebrew, you can install Gort easily by typing:
     :markdown
@@ -19,38 +19,38 @@ docs_downloads_active: true
     %p Otherwise, download using one of the following links:
     .buttons
       .green-button
-        %a{href:"https://s3.amazonaws.com/gort-io/0.7.0/gort_0.7.0_darwin_386.zip", target: "_blank"}
-          <i class="fa fa-download"></i> gort_0.7.0_darwin_386.zip
+        %a{href:"https://s3.amazonaws.com/gort-io/0.8.0/gort_0.8.0_darwin_386.zip", target: "_blank"}
+          <i class="fa fa-download"></i> gort_0.8.0_darwin_386.zip
       .green-button
-        %a{href:"https://s3.amazonaws.com/gort-io/0.7.0/gort_0.7.0_darwin_amd64.zip", target: "_blank"}
-          <i class="fa fa-download"></i> gort_0.7.0_darwin_amd64.zip
+        %a{href:"https://s3.amazonaws.com/gort-io/0.8.0/gort_0.8.0_darwin_amd64.zip", target: "_blank"}
+          <i class="fa fa-download"></i> gort_0.8.0_darwin_amd64.zip
     %br
     %h2 Windows
     .buttons
       .green-button
-        %a{href:"https://s3.amazonaws.com/gort-io/0.7.0/gort_0.7.0_windows_386.zip", target: "_blank"}
-          <i class="fa fa-download"></i> gort_0.7.0_windows_386.zip
+        %a{href:"https://s3.amazonaws.com/gort-io/0.8.0/gort_0.8.0_windows_386.zip", target: "_blank"}
+          <i class="fa fa-download"></i> gort_0.8.0_windows_386.zip
       .green-button
-        %a{href:"https://s3.amazonaws.com/gort-io/0.7.0/gort_0.7.0_windows_amd64.zip", target: "_blank"}
-          <i class="fa fa-download"></i> gort_0.7.0_windows_amd64.zip
+        %a{href:"https://s3.amazonaws.com/gort-io/0.8.0/gort_0.8.0_windows_amd64.zip", target: "_blank"}
+          <i class="fa fa-download"></i> gort_0.8.0_windows_amd64.zip
     %br
     %h2 Linux
     .buttons
       .green-button
-        %a{href:"https://s3.amazonaws.com/gort-io/0.7.0/gort_0.7.0_amd64.deb", target: "_blank"}
-          <i class="fa fa-download"></i> gort_0.7.0_amd64.deb
+        %a{href:"https://s3.amazonaws.com/gort-io/0.8.0/gort_0.8.0_amd64.deb", target: "_blank"}
+          <i class="fa fa-download"></i> gort_0.8.0_amd64.deb
       .green-button
-        %a{href:"https://s3.amazonaws.com/gort-io/0.7.0/gort_0.7.0_armhf.deb", target: "_blank"}
-          <i class="fa fa-download"></i> gort_0.7.0_armhf.deb
+        %a{href:"https://s3.amazonaws.com/gort-io/0.8.0/gort_0.8.0_armhf.deb", target: "_blank"}
+          <i class="fa fa-download"></i> gort_0.8.0_armhf.deb
       .green-button
-        %a{href:"https://s3.amazonaws.com/gort-io/0.7.0/gort_0.7.0_i386.deb", target: "_blank"}
-          <i class="fa fa-download"></i> gort_0.7.0_i386.deb
+        %a{href:"https://s3.amazonaws.com/gort-io/0.8.0/gort_0.8.0_i386.deb", target: "_blank"}
+          <i class="fa fa-download"></i> gort_0.8.0_i386.deb
       .green-button
-        %a{href:"https://s3.amazonaws.com/gort-io/0.7.0/gort_0.7.0_linux_386.tar.gz", target: "_blank"}
-          <i class="fa fa-download"></i> gort_0.7.0_linux_386.tar.gz
+        %a{href:"https://s3.amazonaws.com/gort-io/0.8.0/gort_0.8.0_linux_386.tar.gz", target: "_blank"}
+          <i class="fa fa-download"></i> gort_0.8.0_linux_386.tar.gz
       .green-button
-        %a{href:"https://s3.amazonaws.com/gort-io/0.7.0/gort_0.7.0_linux_amd64.tar.gz", target: "_blank"}
-          <i class="fa fa-download"></i> gort_0.7.0_linux_amd64.tar.gz
+        %a{href:"https://s3.amazonaws.com/gort-io/0.8.0/gort_0.8.0_linux_amd64.tar.gz", target: "_blank"}
+          <i class="fa fa-download"></i> gort_0.8.0_linux_amd64.tar.gz
       .green-button
-        %a{href:"https://s3.amazonaws.com/gort-io/0.7.0/gort_0.7.0_linux_arm.tar.gz", target: "_blank"}
-          <i class="fa fa-download"></i> gort_0.7.0_linux_arm.tar.gz
+        %a{href:"https://s3.amazonaws.com/gort-io/0.8.0/gort_0.8.0_linux_arm.tar.gz", target: "_blank"}
+          <i class="fa fa-download"></i> gort_0.8.0_linux_arm.tar.gz
