--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -7,7 +7,7 @@ homeMenu: true
 grayBackground: true
 
 title_gray: Getting Started
-description_gray: 'The Gort CLI provides many useful features on many hardware platforms, and has no other dependencies. You install Gort separately from any framework, which means you can use it to program Arduinos with the Firmata firmware also compatible with Cylon.js, Gobot, Artoo, & Johnny-Five. And more!'
+description_gray: 'The Gort CLI provides many useful features on a number of hardware platforms, and has no other dependencies. You install Gort separately from any framework, which means you can use it to program Arduinos with the Firmata firmware also compatible with Cylon.js, Gobot, Artoo, & others. Gort also provides lots of useful utilities on other hardware platforms such as Particle, BBC Microbit, and more!'
 button_gray: '<a href="/documentation/getting_started/downloads">DOWNLOAD<br><p>OSX / WINDOWS / LINUX</p></a>'
 
 layout: home
@@ -26,7 +26,7 @@ layout: home
              gort [global options] command [command options] [arguments...]
 
           VERSION:
-             0.7.0
+             0.8.0
 
           COMMANDS:
                scan       Scan for connected devices on Serial, USB, or Bluetooth ports
@@ -34,6 +34,7 @@ layout: home
                arduino    Install avrdude, and upload HEX files to your Arduino
                particle   Upload sketches to your Particle Photon or Electron
                digispark  Configure your Digispark microcontroller
+               microbit   Install and upload firmware to your BBC Microbit
                crazyflie  Configure your Crazyflie
                klaatu     barada nikto
                help, h    Shows a list of commands or help for one command
@@ -41,7 +42,6 @@ layout: home
           GLOBAL OPTIONS:
              --help, -h     show help
              --version, -v  print the version
-
   .title
     %h6 Scan for connected serial devices:
   .description
