--- a/source/documentation/getting_started/index.html.haml
+++ b/source/documentation/getting_started/index.html.haml
@@ -9,8 +9,8 @@ docs_home_active: true
 
 .content-info
   %h1.title-top Documentation Home
-  %p  We now have precompiled binaries! You can also build from source.
-  %p  The Gort CLI provides many useful features on many hardware platforms, and has no other dependencies. You install Gort separately from any framework, which means you can use it to program Arduinos with the Firmata firmware also compatible with Cylon.js, Gobot, Artoo, & Johnny-Five.
+  %p  We have precompiled binaries for most platforms. You can also build from source.
+  %p  The Gort CLI provides many useful features and has no other dependencies. You install Gort separately from any framework, which means you can use it to program Arduinos with the Firmata firmware also compatible with Cylon.js, Gobot, Artoo, & others.
   %h2 How To Use
   .description
     :markdown
@@ -22,17 +22,18 @@ docs_home_active: true
              gort [global options] command [command options] [arguments...]
 
           VERSION:
-             0.7.0
+             0.8.0
 
           COMMANDS:
-               scan       Scan for connected devices on Serial, USB, or Bluetooth ports
-               bluetooth  Connect & disconnect bluetooth devices.
-               arduino    Install avrdude, and upload HEX files to your Arduino
-               particle   Upload sketches to your Particle Photon or Electron
-               digispark  Configure your Digispark microcontroller
-               crazyflie  Configure your Crazyflie
-               klaatu     barada nikto
-               help, h    Shows a list of commands or help for one command
+             scan       Scan for connected devices on Serial, USB, or Bluetooth ports
+             bluetooth  Connect & disconnect bluetooth devices.
+             arduino    Install avrdude, and upload HEX files to your Arduino
+             particle   Upload sketches to your Particle Photon or Electron
+             digispark  Configure your Digispark microcontroller
+             microbit   Install and upload firmware to your BBC Microbit
+             crazyflie  Configure your Crazyflie
+             klaatu     barada nikto
+             help, h    Shows a list of commands or help for one command
 
           GLOBAL OPTIONS:
              --help, -h     show help
