--- a/source/documentation/getting_started/downloads.html.haml
+++ b/source/documentation/getting_started/downloads.html.haml
@@ -19,38 +19,38 @@ docs_downloads_active: true
     %p Otherwise, download using one of the following links:
     .buttons
       .green-button
-        %a{href:"https://s3.amazonaws.com/gort-io/0.9.0/gort_0.9.0_darwin_386.zip", target: "_blank"}
+        %a{href:"https://github.com/hybridgroup/gort/releases/download/v0.9.0/gort_0.9.0_darwin_386.zip", target: "_blank"}
           <i class="fa fa-download"></i> gort_0.9.0_darwin_386.zip
       .green-button
-        %a{href:"https://s3.amazonaws.com/gort-io/0.9.0/gort_0.9.0_darwin_amd64.zip", target: "_blank"}
+        %a{href:"https://github.com/hybridgroup/gort/releases/download/v0.9.0/gort_0.9.0_darwin_amd64.zip", target: "_blank"}
           <i class="fa fa-download"></i> gort_0.9.0_darwin_amd64.zip
     %br
     %h2 Windows
     .buttons
       .green-button
-        %a{href:"https://s3.amazonaws.com/gort-io/0.9.0/gort_0.9.0_windows_386.zip", target: "_blank"}
+        %a{href:"https://github.com/hybridgroup/gort/releases/download/v0.9.0/gort_0.9.0_windows_386.zip", target: "_blank"}
           <i class="fa fa-download"></i> gort_0.9.0_windows_386.zip
       .green-button
-        %a{href:"https://s3.amazonaws.com/gort-io/0.9.0/gort_0.9.0_windows_amd64.zip", target: "_blank"}
+        %a{href:"https://github.com/hybridgroup/gort/releases/download/v0.9.0/gort_0.9.0_windows_amd64.zip", target: "_blank"}
           <i class="fa fa-download"></i> gort_0.9.0_windows_amd64.zip
     %br
     %h2 Linux
     .buttons
       .green-button
-        %a{href:"https://s3.amazonaws.com/gort-io/0.9.0/gort_0.9.0_amd64.deb", target: "_blank"}
+        %a{href:"https://github.com/hybridgroup/gort/releases/download/v0.9.0/gort_0.9.0_amd64.deb", target: "_blank"}
           <i class="fa fa-download"></i> gort_0.9.0_amd64.deb
       .green-button
-        %a{href:"https://s3.amazonaws.com/gort-io/0.9.0/gort_0.9.0_armhf.deb", target: "_blank"}
+        %a{href:"https://github.com/hybridgroup/gort/releases/download/v0.9.0/gort_0.9.0_armhf.deb", target: "_blank"}
           <i class="fa fa-download"></i> gort_0.9.0_armhf.deb
       .green-button
-        %a{href:"https://s3.amazonaws.com/gort-io/0.9.0/gort_0.9.0_i386.deb", target: "_blank"}
+        %a{href:"https://github.com/hybridgroup/gort/releases/download/v0.9.0/gort_0.9.0_i386.deb", target: "_blank"}
           <i class="fa fa-download"></i> gort_0.9.0_i386.deb
       .green-button
-        %a{href:"https://s3.amazonaws.com/gort-io/0.9.0/gort_0.9.0_linux_386.tar.gz", target: "_blank"}
+        %a{href:"https://github.com/hybridgroup/gort/releases/download/v0.9.0/gort_0.9.0_linux_386.tar.gz", target: "_blank"}
           <i class="fa fa-download"></i> gort_0.9.0_linux_386.tar.gz
       .green-button
-        %a{href:"https://s3.amazonaws.com/gort-io/0.9.0/gort_0.9.0_linux_amd64.tar.gz", target: "_blank"}
+        %a{href:"https://github.com/hybridgroup/gort/releases/download/v0.9.0/gort_0.9.0_linux_amd64.tar.gz", target: "_blank"}
           <i class="fa fa-download"></i> gort_0.9.0_linux_amd64.tar.gz
       .green-button
-        %a{href:"https://s3.amazonaws.com/gort-io/0.9.0/gort_0.9.0_linux_arm.tar.gz", target: "_blank"}
+        %a{href:"https://github.com/hybridgroup/gort/releases/download/v0.9.0/gort_0.9.0_linux_arm.tar.gz", target: "_blank"}
           <i class="fa fa-download"></i> gort_0.9.0_linux_arm.tar.gz
